idf_component_register(
    SRCS
        "main.cpp"
        "button/button_event_queue_handler_t.cpp"
        "button/button_isr_handler_t.cpp"
        "button/button_raw_event_queue_handler_t.cpp"
        "buzzer/buzzer_event_queue_handler_t.cpp"
        "game_mode/game_mode_service_t.cpp"
        "led/led_heartbeat_service_t.cpp"
        "respawn_counter/respawn_counter_service.cpp"
        "webserver/webserver_respawn_counter_handlers_t.cpp"
        "webserver/webserver_service_t.cpp"
        "webserver/webserver_static_handlers_t.cpp"
    REQUIRES
        "freertos"
        "driver"
        "json"
        "nvs_flash"        
        "esp_wifi"
        "esp_event"
        "esp_timer"
        "esp_http_server"
        "dns_server"
    EMBED_FILES
        "dist/browser/favicon.ico"
        "dist/browser/index.html"
        "dist/browser/main.js"
        "dist/browser/styles.css")