idf_component_register(
    SRCS
        "wifi-captive-portal-esp-idf.c"
        "wifi-captive-portal-esp-idf-dns.c"
        "wifi-captive-portal-esp-idf-httpd.c"
        "wifi-captive-portal-esp-idf-wifi.c"
    INCLUDE_DIRS
        "include"
    REQUIRES
        "nvs_flash"
        "vfs"
        "fatfs"
        "lwip"
        "wear_levelling"
        "esp_http_server"
        "esp_wifi")